		- now compiles doge-*.cc routines with -fno-merge-constants
		  and -fno-merge-all-constants, so that constants in these
		  modules do not accidentally end up in scrambled regions

		include/innocent-pear/bbq.h :
		- now defines and uses innocent_pear_always_inline and
		  innocent_pear_always_inline_and(...), and adds attributes
		  for hidden visibility and anti-constant-merging

		include/innocent-pear/dawg.h ,
		include/innocent-pear/kthxbai.h ,
		include/innocent-pear/lolwut.h ,
		include/innocent-pear/orly.h ,
		include/innocent-pear/rofl.h ,
		include/innocent-pear/tfw.h ,
		include/innocent-pear/unpossible.h ,
		include/innocent-pear/yarly.h ,
		include/innocent-pear/host/lolcat.h ,
		share/innocent-pear/doge-06.cc :
		- now uses innocent_pear_always_inline and
		  innocent_pear_always_inline_and(...)

		include/innocent-pear/omg.h :
		- now uses innocent_pear_always_inline and
		  innocent_pear_always_inline_and(...)
		- omg<...> is now also given hidden visibility (under ELF)
		- omg<...>::omg() now tries to issue `nop's under x86-32,
		  x86-64, and ARM, and also emit dummy instructions for ARM
		  in ARM mode
		- omg<...>::wheee() for ARM now marks ip as clobbered when
		  creating its own veneers

		GNUmakefile :
		- now dumps larger portions of compiled test binaries...
		- no longer compiles test-doge-eh.debug on default (again)

2016-11-19	"I shot an arrow in to the air, and it stuck."  (6)

		include/innocent-pear/omg.h :
		- gobs of debugging code for omg<...>::wheee()

		include/innocent-pear/rofl.h :
		- for ARM, now marks some operands as early-clobber

		GNUmakefile :
		- now also compiles test-omg-wheee in full-fledged debug mode
		- now compiles test-doge-eh.debug (again)

		test/test-omg-wheee.cc ,
		test/test-omg-wheee.good :
		- beefed up

2016-11-18	"I shot an arrow in to the air, and it stuck."  (5)

		include/innocent-pear/omg.h :
		- omg<...>::wheee() now correctly marks `push'...`ret'/`lret'/