@@ -463,7 +463,7 @@ struct kthxbai_impl_split<State, T, IntoT, Flags, Levels, Left, true>
 
 template<rand_state_t State, class T,
     ops_flags_t Flags = innocent_pear::ops::allow_minimal,
-    unsigned Levels = 3u>
+    unsigned Levels = 2u>
 class kthxbai;
 
 template<rand_state_t State, ops_flags_t Flags, unsigned Levels>
